--- a/styles.scss
+++ b/styles.scss
@@ -119,6 +119,7 @@ img {
     left: 40px;
     width: 40px;
     height: 30px;
+    text-align: center;
 }
 
 .who-is-this {
@@ -162,7 +163,6 @@ img {
 .start-game-btn, .play-again-btn {
     padding: 3rem 1.5rem;
     display: flex;
-    align-items: center;
     border-radius: 5px;
     font-size: 24px;
     cursor: pointer;
@@ -183,6 +183,11 @@ img {
         font-size: 4rem;
         color: darkgreen;
         padding-right: 10px;
+    }
+
+    span {
+        position: relative;
+        top: 17px;
     }
 }
 
