--- a/styles.scss
+++ b/styles.scss
@@ -191,6 +191,13 @@ img {
     }
 }
 
+.play-again-btn {
+     span {
+        position: relative;
+        top: 0px;
+    }   
+}
+
 .youtube-wrapper {
     display: flex;
     align-items: center;
