updated speaker notification

--- a/styles.scss
+++ b/styles.scss
@@ -191,12 +191,12 @@ img {
     }
 }
 
-// .play-again-btn {
-//      span {
-//         position: relative;
-//         top: 0px;
-//     }   
-// }
+.play-again-btn {
+     span {
+        position: relative;
+        top: 0px;
+    }   
+}
 
 .youtube-wrapper {
     display: flex;
